[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/enemy/2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game_Intro/Menu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Menu/MenuBackground.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Alkhemikal.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Audio/house_openSound_mp3cut.net.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 5
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.0980392, 0.109804, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 6 )

[sub_resource type="AnimatedTexture" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.0980392, 0.109804, 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.133333, 0.0980392, 0.109804, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.138462, 0.446154, 1 )
colors = PoolColorArray( 0.773438, 0.773438, 0.773438, 1, 0.128377, 0.0312805, 0.320313, 1, 0.0632011, 0.0153996, 0.157692, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 3
emission_point_count = 1
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
angular_velocity = 0.5
angular_velocity_random = 1.0
orbit_velocity = 1.5
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.5
color_ramp = SubResource( 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Menu_BackgGround" type="Sprite" parent="."]
position = Vector2( 524.343, 289.162 )
scale = Vector2( 0.830033, 0.859082 )
texture = ExtResource( 5 )

[node name="Foreground_EnemyObj" type="Sprite" parent="."]
position = Vector2( 588.672, 406.823 )
scale = Vector2( -0.24, 0.471 )
texture = ExtResource( 1 )

[node name="Title_Inf" type="Label" parent="."]
margin_left = 53.8428
margin_top = 60.6594
margin_right = 469.843
margin_bottom = 191.659
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ALONE IN THE DARK"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Control"]
margin_left = 161.0
margin_top = 363.0
margin_right = 361.0
margin_bottom = 405.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Start"
icon = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="Control"]
margin_left = 162.0
margin_top = 411.0
margin_right = 362.0
margin_bottom = 453.0
custom_styles/hover = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Control"]
margin_left = 162.0
margin_top = 459.0
margin_right = 362.0
margin_bottom = 498.0
custom_styles/hover = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Mouse_Pointer" type="Particles2D" parent="."]
position = Vector2( -25.8815, -25.9477 )
scale = Vector2( 2, 2 )
emitting = false
amount = 100
lifetime = 0.5
speed_scale = 0.5
explosiveness = 0.5
randomness = 1.0
process_material = SubResource( 11 )
[connection signal="pressed" from="Control/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="finished" from="BackgroundAudio" to="." method="_on_BackgroundAudio_finished"]
